# the-dreamer

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  PROJECT-NOTES.md  REBAKE-V4-INSTRUCTIONS.md  RELEASE-NOTES.md  breakpoint.md  validator.json
assets/library-src/: akwf_feats.json  bake_final.py  bake_loops.py  fam_sources.json  loop_roots.json  manifest.json
comms/: AGENTS.md  README.md  to-human.md  to-mac.md  to-vm.md
design-handoff/: DESIGN-v2.md  ENVIRONMENT.md  FEATURES.md  GUI_DEFECT_SHEET.md  GUI_DSP_DIFF.md  GUI_INTEGRATION_CONTRACT.md  GUI_PROD_MISMATCH.md  The_Dreamer_Vector_GUI_v4.html  UX_ROUND_HANDOFF.md
design-handoff/gui-v5/: README.md  The Dreamer GUI.html  wave-list-bank-order.js
design-handoff/presets/: PRESETS.md
design-handoff/v13/: DSP_BUILD.md  GAIN_STAGING.md  GUI_SPEC.md  README.md  The Dreamer GUI.html
design-handoff/v6/: DSP_BUILD.md  wave-list-bank3.js
design-handoff/v7/: README.md  The Dreamer GUI.html
design-handoff/v8/: DSP_BUILD.md  FEATURES.md  README.md  The Dreamer GUI.html
design-handoff/v9/: GUI_SPEC.md  README.md  The Dreamer GUI.html
dsp/bank/: Bank3.h  LoopBankData.h  LoopRoots.h  PcmOscillator.h  RomplerBank.h  ShotBankData.h
dsp/glue/: Barberpole.h  Dimension.h  DreamVoice.h  Ensemble.h  FilterExtra.h  GlobalFilter.h  LoFi.h  OutputStage.h  PcmOsc3.h  RhinoFilterSlot.h  Rotary.h  ShaperTables.h  StereoWidth.h  Talkbox.h  ToneFilter.h  ToneSvf.h  WaveNormTable.h  Waveshaper.h  ZPlaneFilter.h
dsp/ported/: RhinoFilter.h  RhinoLfo.h
dsp/ported/fx/: Dynamics.h  Effects.h  Instability.h  ModFx.h  ReturnFilter.h  SpringReverb.h
files/rompler-bank-v2/: Mode2Voice.h  README.md  RomplerBankData.h  bake_bank.py  test_mode2.cpp
plugin/: ParamLaws.h  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Td007Remap.h  V18Remap.h  presets.json
plugin/gui/: app.js  editor.html  style.css
rompler-bank-v1/: README.md  test_bank.cpp
tests/: test_bank.cpp  test_bank3.cpp  test_bank3_lib.cpp  test_dsp_features.cpp  test_engine.cpp  test_filter_extra.cpp  test_filter_port.cpp  test_fx_port.cpp  test_fx_read_bounds.cpp  test_fx_v15.cpp  test_gain_staging.cpp  test_loop_tuning.cpp  test_td007_remap.cpp  test_tone_filter.cpp  test_v18_engine.cpp  test_v18_remap.cpp  test_voice.cpp
tools/: bake_loop_roots.cpp  bake_loops.py  bake_loops2.py  bake_loops_header.cpp  bake_shapers.cpp  bake_shots.cpp  bake_shots_header.cpp  bake_wave_norm.cpp  check_presets.sh  correct_drift.cpp  emit_wave_list.cpp  measure_drift.cpp  migrate_env_times.sh  migrate_keytrack.sh
tools/hostprobe/: CMakeLists.txt  main.cpp
validation/: TD-001-REPORT.md  VALIDATION.md  v18_golden.txt
